[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-dotenv-cast"
version = "0.1.1"
description = "Type-safe environment variable loading with casting and defaults."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["env", "dotenv", "environment", "config", "cast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-dotenv-cast#readme"
Repository = "https://github.com/philiprehberger/py-dotenv-cast"
Issues = "https://github.com/philiprehberger/py-dotenv-cast/issues"
Changelog = "https://github.com/philiprehberger/py-dotenv-cast/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_dotenv_cast"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
